--- a/src/main/resources/static/member/Member_Member_Update.html
+++ b/src/main/resources/static/member/Member_Member_Update.html
@@ -256,9 +256,9 @@
                 </el-form-item>
                 <el-form-item style="width: 500px;" prop="sex" label="性别">
                   <el-select style="float: left;" v-model="user.sex">
-                    <el-option :value="0" label="请选择"></el-option>
-                    <el-option :value="1" label="男"></el-option>
-                    <el-option :value="2 "label="女"></el-option>
+                    <el-option value=0 label="请选择"></el-option>
+                    <el-option value=1 label="男"></el-option>
+                    <el-option value=2 label="女"></el-option>
                   </el-select>
                 </el-form-item>
                 <el-form-item style="width: 500px;" prop="roleId" label="角色">
